--- a/package.json
+++ b/package.json
@@ -2,15 +2,34 @@
   "name": "vite-connect-api-mocker",
   "version": "1.0.0",
   "description": "Create a mock API server using Vite and Connect",
-  "main": "index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "scripts": {
+    "clean": "rimraf dist && rimraf es",
+    "dev": "unbuild --stub",
+    "build": "unbuild",
+    "prepublishOnly": "npm run build",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
-  "keywords": ["vite", "connect", "api", "mock"],
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "vite",
+    "connect",
+    "api",
+    "mock"
+  ],
   "author": "Mauricio Flor",
   "license": "MIT",
   "repository": {
@@ -27,12 +46,16 @@
     "@types/node": "^22.10.4",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
+    "esbuild": "^0.24.2",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
+    "typescript": "^5.7.2",
+    "unbuild": "^3.2.0",
     "vite": "^6.0.6"
   },
   "dependencies": {
