--- a/package.json
+++ b/package.json
@@ -37,29 +37,31 @@
     "url": "https://github.com/yosee1441/vite-connect-api-mocker.git"
   },
   "peerDependencies": {
-    "vite": "^4.0.0"
+    "vite": "6.0.6",
+    "esbuild": "0.24.2"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.5",
-    "@types/connect": "^3.4.38",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.4",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
-    "esbuild": "^0.24.2",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "jest": "^29.7.0",
-    "prettier": "^3.4.2",
-    "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2",
-    "unbuild": "^3.2.0",
-    "vite": "^6.0.6"
+    "@types/body-parser": "1.19.5",
+    "@types/connect": "3.4.38",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.10.4",
+    "@typescript-eslint/eslint-plugin": "8.19.0",
+    "@typescript-eslint/parser": "8.19.0",
+    "esbuild": "0.24.2",
+    "eslint": "9.17.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "jest": "29.7.0",
+    "prettier": "3.4.2",
+    "rimraf": "6.0.1",
+    "ts-jest": "29.2.5",
+    "typescript": "5.7.2",
+    "unbuild": "3.2.0",
+    "vite": "6.0.6"
   },
+  "homepage": "https://github.com/yosee1441/vite-connect-api-mocker/tree/main/#readme",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "connect": "^3.7.0"
+    "body-parser": "1.20.3",
+    "connect": "3.7.0"
   }
 }
