--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-connect-api-mocker",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Create a mock API server using Vite and Connect",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -9,6 +9,7 @@
     "dev": "unbuild --stub",
     "build": "unbuild",
     "prepublishOnly": "npm run build",
+    "publish": "npm publish --access public",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "test": "jest",
@@ -37,8 +38,8 @@
     "url": "https://github.com/yosee1441/vite-connect-api-mocker.git"
   },
   "peerDependencies": {
-    "vite": "6.0.6",
-    "esbuild": "0.24.2"
+    "esbuild": ">=0.17",
+    "vite": ">=4.0.0"
   },
   "devDependencies": {
     "@types/body-parser": "1.19.5",
@@ -57,7 +58,7 @@
     "ts-jest": "29.2.5",
     "typescript": "5.7.2",
     "unbuild": "3.2.0",
-    "vite": "6.0.6"
+    "vite": "5.1.6"
   },
   "homepage": "https://github.com/yosee1441/vite-connect-api-mocker/tree/main/#readme",
   "dependencies": {
