--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-connect-api-mocker",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "description": "Create a mock API server using Vite and Connect",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -18,6 +18,7 @@
   },
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
     }
