--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-connect-api-mocker",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Create a mock API server using Vite and Connect",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -10,7 +10,7 @@
     "dev": "unbuild --stub",
     "build": "unbuild",
     "prepublishOnly": "npm run build",
-    "publish": "npm publish --access public",
+    "push:npm": "np",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "test": "jest",
@@ -55,6 +55,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
     "jest": "29.7.0",
+    "np": "10.1.0",
     "prettier": "3.4.2",
     "rimraf": "6.0.1",
     "ts-jest": "29.2.5",
