--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "dist"
   ],
   "engines": {
-    "node": ">=16",
-    "npm": ">=8"
+    "node": ">=16.0.0"
   },
   "keywords": [
     "vite",
@@ -66,6 +65,9 @@
     "typescript": "5.7.2",
     "unbuild": "3.2.0",
     "vite": "5.1.6"
+  },
+  "bugs": {
+    "url": "https://github.com/yosee1441/vite-connect-api-mocker/issues"
   },
   "homepage": "https://github.com/yosee1441/vite-connect-api-mocker/tree/main/#readme",
   "dependencies": {
